Downgrade Gradle/AGP to stable to fix restricted method warning
Gradle 9.3.1 + AGP 9.1.0 + Kotlin 2.4.0 triggers Java 21/24 warning:
'restricted method in java.lang.System has been called by
net.rubygrapefruit.platform.internal.NativeLibraryLoader'

This is harmless but confusing - first build looks like it failed.

Switch to Flutter stable recommended combo:
- AGP 8.7.3
- Kotlin 2.1.0
- Gradle 8.10.2

Add troubleshooting docs for this warning with wait instructions.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>